--- a/styles.css
+++ b/styles.css
@@ -1,117 +1,170 @@
+
 :root {
-    --color-primario: burlywood;
-    --color-secundario: rgb(196, 113, 46);
-    --fuente-principal: system-ui;
-    --tamaño-titulos: 
-    --tamaño-subtitulos1: 
-    --tamaño-subtitulos2: 
-    --tamaño-subtitulos3: 
+  --color-primario: rgb(199, 101, 44);
+  --color-secundario: rgb(250, 250, 250);
+  --color-boton: rgb(235, 153, 2);
+  --fuente-principal: system-ui;
+  --tamano-titulos: font-size 24px;
+  --tamano-subtitulos1: 
+  --tamano-subtitulos2: 
+  --tamano-subtitulos3: 
 
 
 }
 
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
+
 
 body{
-    font-family: var(--fuente-principal);
+  font-family: var(--fuente-principal);
 }
 h1,h2,h3,h4,h5,h6 {
-    color: #222;
-    margin-bottom: 0.5em;
-    font-weight: bold;
+  color: var(--color-primario);
+  margin-bottom: 0.5em;
+  font-weight: bold;
 }
 
 p{
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 a{
-    color: #2b9dc0;
+  color: #2b9dc0;
 }
 
 a:hover{
-    text-decoration: underline;
-    color: rgb(197, 34, 189);
+  text-decoration: underline;
+  color: rgb(197, 34, 189);
 }
-.bar {
-    
-    height: 75px;
-    background-color: var(--color-primario);
-    display: flex;
-    
-}
-.bar__li{
-    margin-right: 100px;
-    margin-top: 20PX;
-}
+
+
 
 
 button {
-    width: auto;
-    height: auto;
-    background: rgb(235, 153, 2) ;
-    font-size: 20px;
-    border: 2px solid rgb(235, 153, 2);
-    box-shadow: 0px 0px 10px #222 ;
-    border-radius: 10px;
-    
+  width: auto;
+  height: auto;
+  background: var(--color-boton) ;
+  font-size: 20px;
+  border: 1px solid #222;
+  box-shadow: 0px 0px 15px  #5e5753 ;
+  border-radius: 5px;
+  
 
 }
 .container{
-  max-width: 1300px;
-  margin: auto;
+max-width: 1300px;
+margin: auto;
 }
 
 header
 {
-  background-color: rgb(226, 190, 190);
+
+background-color: var(--color-secundario);
 }
 header .logo{
-  margin: 0;
-  padding: 25px 30px;
-  font-weight: bold;
-  color: rgb(235, 153, 2);
-  font-size: 1.5em;
+margin: 0;
+padding: 25px 30px;
+font-weight: bold;
+color: rgb(235, 153, 2);
+font-size: 1.5em;
 }
 header .container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+display: flex;
+flex-direction: column;
+align-items: center;
 
 
 }
 
-header nav{
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding-bottom: 25px;
+header .navegador{
+display: flex;
+flex-direction: column;
+align-items: center;
+text-align: center;
+padding-bottom: 25px;
 }
 
 header a{
-  padding: 5px 12px;
-  text-decoration: none;
-  font-weight: bold;
-  color: #222;
+padding: 5px 12px;
+text-decoration: none;
+font-weight: bold;
+color: #222;
+
 
 }
+
+.secciones, .carta{
+text-align: center;
+padding: 0px 12px;
+margin-bottom: 10px;
+
+}
+
+.secciones .carta{
+border-radius: 15px;
+padding: 20px;
+}
+
+.secciones:first-child, .secciones:last-child{
+background-color: rgb(30 30 30);
+color: white;
+
+}
+
+
+.carta:first-child{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+  ),url(https://media.istockphoto.com/id/1471844577/es/foto/deliciosa-hamburguesa-doble-con-patatas-fritas-y-verduras-en-tabla-de-cortar-de-madera.jpg?s=612x612&w=0&k=20&c=OV6etFKYOrJeDq8v3-NvGby-pGnnOllYB-pMZJIJgYU=)
+}
+
+.carta:nth-child(2){
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+),url(https://media.istockphoto.com/id/943449226/es/foto/concepto-promocional-flyer-y-cartel-para-restaurantes-o-pizzer%C3%ADas-plantilla-con-pizza-de.jpg?s=612x612&w=0&k=20&c=SKTA42IP3L-MSEgHIAFx9JBZMJ4V_695Ba1vDTk8hsk=)
+
+}
+.carta:last-child{
+  background-image: linear-gradient(
+    0deg,
+    rgba(0,0,0,0.5),
+    rgba(0,0,0,0.5)
+),url(https://media.istockphoto.com/id/1161700170/es/foto/completo-italiano-chileno-s%C3%A1ndwiches-de-perro-caliente-con-tomate-aguacate-y-mayonesa-en-tabla.jpg?s=612x612&w=0&k=20&c=woxfh3QEBLXQfQkb-GU_sQ0jGjoFxJymE8HHflQuxxA=)
+}
+
+html{
+scroll-behavior: smooth;
+}
+
+
+.secciones:nth-child(2){
+margin: 15px 0px;
+font-weight: bold;
+}
+
+
+
+@media (min-width: 720px){
+  header .container{
+    flex-direction: row;
+  }
+  
+}
+
+
+
