--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@
 
 body{
   font-family: var(--fuente-principal);
+
+}
+h2{
+  
+  font-size: 22px;
+
 }
 h1,h2,h3,h4,h5,h6 {
   color: var(--color-primario);
@@ -189,15 +195,20 @@ em{
   header .container{
     flex-direction: row;
     justify-content: space-between;
+    max-width: 100%;
   }
+ 
   
-  header .container__navegador, header .container__logo{
+  .container__navegador, .container__logo{
     flex-direction: row;
     padding-top: 24px;
     padding-bottom: 0;
     padding-right: 40px;
     font-size: 20px;
+    
   }
+  
+
   
   .productos{
     display: flex;
